add accessibility and terms of service pages; add new styles; add navigation links to new pages

--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -35,7 +35,7 @@
     </div>
     <div class="footer-copyright right-align">
       <div class="container">
-      &copy; 2018 Regents of the University of Michigan
+      <a href="/accessibility/">Accessibility</a>&nbsp;&nbsp;&nbsp;&nbsp; &middot; &nbsp;&nbsp;&nbsp;&nbsp;<a href="/terms/">Terms of Service</a> &nbsp;&nbsp;&nbsp;&nbsp; &middot; &nbsp;&nbsp;&nbsp;&nbsp; &copy; 2018 Regents of the University of Michigan
       </div>
     </div>
   </footer>
