--- a/app/views/hyrax/monographs/_attribute_rows.html.erb
+++ b/app/views/hyrax/monographs/_attribute_rows.html.erb
@@ -1,13 +1,18 @@
-  <%= presenter.attribute_to_html(:description, render_as: :markdown) %>
-  <%= presenter.attribute_to_html(:creator_full_name, label: t('author'), render_as: :linked) %>
-  <%= presenter.attribute_to_html(:editor, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:contributor, label: t('additional_authors'), render_as: :linked) %>
-  <%= presenter.attribute_to_html(:subject, catalog_search_link: true) %>
-  <%= presenter.attribute_to_html(:press, label: t('publisher')) %>
-  <%= presenter.attribute_to_html(:language) %>
-  <%= presenter.attribute_to_html(:date_published) %>
-  <%= presenter.attribute_to_html(:isbn, label: t('isbn')) %>
-  <%= presenter.attribute_to_html(:isbn_paper, label: t('isbn_paper')) %>
-  <%= presenter.attribute_to_html(:isbn_ebook, label: t('isbn_ebook')) %>
-  <%= presenter.attribute_to_html(:copyright_holder) %>
-  <%= presenter.attribute_to_html(:buy_url, render_as: :markdown) %>
+<%= presenter.attribute_to_html(:press, label: t('publisher')) %>
+<%= presenter.attribute_to_html(:description, render_as: :markdown) %>
+<%= presenter.attribute_to_html(:subject, catalog_search_link: true) %>
+<%= presenter.attribute_to_html(:language) %>
+<%= presenter.attribute_to_html(:section_titles) %>
+<%= presenter.attribute_to_html(:buy_url, render_as: :markdown) %>
+
+<%= presenter.attribute_to_html(:creator_full_name, label: t('author'), render_as: :linked) %>
+<%= presenter.attribute_to_html(:contributor, label: t('additional_authors'), render_as: :linked) %>
+<%= presenter.attribute_to_html(:creator_display) %>
+<%= presenter.attribute_to_html(:editor_full_name, label: t('author'), render_as: :linked) %>
+<%= presenter.attribute_to_html(:editor, label: t('editor'), render_as: :linked) %>
+
+<%= presenter.attribute_to_html(:date_published) %>
+<%= presenter.attribute_to_html(:isbn, label: t('isbn')) %>
+<%= presenter.attribute_to_html(:isbn_paper, label: t('isbn_paper')) %>
+<%= presenter.attribute_to_html(:isbn_ebook, label: t('isbn_ebook')) %>
+<%= presenter.attribute_to_html(:copyright_holder) %>
