HEB metadata (ISBN, series, Legacy ID)

--- a/app/views/hyrax/base/_form_metadata.html.erb
+++ b/app/views/hyrax/base/_form_metadata.html.erb
@@ -15,6 +15,7 @@
   <%= f.input :description,  as: :text, input_html: { rows: '5' } %>
   <%= f.input :subject, as: :multi_value %>
   <%= f.input :language, as: :multi_value %>
+  <%= f.input :series, as: :multi_value %>
   <%= f.input :section_titles,  as: :text, input_html: { rows: '5' } %>
   <%= f.input :buy_url, as: :multi_value %>
   <%= f.input :copyright_holder %>
