add HEB monograph representatives and catalog metadata

--- a/app/assets/stylesheets/application/heliotrope.scss
+++ b/app/assets/stylesheets/application/heliotrope.scss
@@ -439,6 +439,12 @@ footer.press {
     width: 80%;
     height: 150px;
   }
+
+  section#reviews {
+    th, td {
+      padding: 10px;
+    }
+  }
 }
 ///////////////////////////////////
 // ASSET PAGES
