HELIO-1861 toc link to CSB is broken for multi rendition epubs
Instead of using the chapter's href to link into CSB, use the
chapter's CFI. This "base" CFI should work for both renditions.

--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -4,7 +4,7 @@
 <% @monograph_presenter.epub_presenter.chapters.each do |chapter| %>
   <div class="row chapter">
     <div class="col-sm-12">
-      <h3><a href="<%= epub_url %>#/<%= epub_dir %>/<%= chapter.href %>"><%= chapter.title %></a></h3>
+      <h3><a href="<%= epub_url %>#<%= chapter.cfi %>4/1:0"><%= chapter.title %></a></h3>
       <%= chapter.blurb unless chapter.paragraphs.empty? %>
       <hr>
     </div>
